@@ -1,5 +1,7 @@
 v1.1 - Pending
 	+ Allow searching ALL metadata in library ("everything")
+	+ Add "shuffle" and "repeat" commandline arguments
+	+ Show if mpd is updating in statusbar
 	+ Save last used option in library search
 	+ Fixes to prevent problems between withdrawing app & gtk.StatusIcon
 	+ Update code for dbus-python 0.80 API (Jordan)
